sidebar and top img

--- a/frontend/src/components/sections/sidebar.css
+++ b/frontend/src/components/sections/sidebar.css
@@ -16,7 +16,9 @@
 }
 
 .sidebar__logo > img {
-    height: 45px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .sidebar__item {
