--- a/frontend/src/components/sections/sidebar.css
+++ b/frontend/src/components/sections/sidebar.css
@@ -6,6 +6,7 @@
     top: 0;
     background-color: var(--main-bg);
     box-shadow: var(--box-shadow);
+    z-index: 999;
 }
 
 .sidebar__logo {
@@ -55,3 +56,81 @@
     );
     color: var(--txt-white);
 }
+
+@media screen and (max-width : 768px) {
+    .sidebar{
+        min-width: 40px;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        background-color: var(--main-bg);
+        box-shadow: var(--box-shadow);
+        z-index: 999;
+    }
+
+    .sidebar__logo img{
+        display: none;
+    }
+
+    .sidebar .sidebar__item {
+        padding: 0 8px;
+    }
+
+    .sidebar .sidebar__item-inner {
+        padding: 15px 5px;
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        transition: color 0.3s ease 0s;
+    }
+
+    .sidebar .sidebar__item-inner > i {
+        margin-left: 10px;
+        font-size: 1.5rem;
+    }
+
+    .sidebar .sidebar__item-inner > span{
+        display: none;
+    }
+
+    /*hover*/
+    .sidebar:hover {
+        min-width: var(--sidebar-width);
+        height: 100vh;
+        position: fixed;
+        left: 0;
+        top: 0;
+        background-color: var(--main-bg);
+        box-shadow: var(--box-shadow);
+        z-index: 999;
+    }
+
+    .sidebar:hover .sidebar__item-inner {
+        padding: 15px 25px;
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        transition: color 0.3s ease 0s;
+    }
+
+    .sidebar:hover .sidebar__logo img {
+        display: inline-block;
+    }
+
+    .sidebar:hover .sidebar__item {
+        padding: 0 20px;
+    }
+
+    .sidebar:hover .sidebar__item-inner > i {
+        margin-right: 10px;
+        font-size: 1.5rem;
+    }
+
+    .sidebar:hover .sidebar__item-inner > span{
+        left: 0;
+        display: inline-block;
+    }
+}
+
+
