--- a/frontend/src/components/pages/mypage/panda/pandaMyPage.css
+++ b/frontend/src/components/pages/mypage/panda/pandaMyPage.css
@@ -11,3 +11,11 @@
 .layout__content-main {
     padding: 30px;
 }
+
+@media screen and (max-width : 768px) {
+    .layout__content {
+        padding-left: 70px;
+        background-color: var(--second-bg);
+        min-height: 100vh;
+    }
+}
