--- a/frontend/src/components/UI/badge/badge.css
+++ b/frontend/src/components/UI/badge/badge.css
@@ -1,8 +1,9 @@
-.badge {
+.tableBadge {
     padding: 6px 11px;
     color: var(--txt-white);
     border-radius: 10px;
     box-shadow: var(--box-shadow);
+    font-size: 17px;
 }
 
 .badge-danger {
