--- a/frontend/src/components/pages/mypage/buyer/buyerMyPage.css
+++ b/frontend/src/components/pages/mypage/buyer/buyerMyPage.css
@@ -19,3 +19,8 @@
         min-height: 100vh;
     }
 }
+@media screen and (max-width: 768px){
+    .layout__content-main{
+        padding: 10px;
+    }
+}
