--- a/frontend/src/components/UI/table/myPageTable.css
+++ b/frontend/src/components/UI/table/myPageTable.css
@@ -32,7 +32,7 @@ tbody > tr:hover {
 .table__pagination {
     display: flex;
     width: 100%;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     margin-top: 20px;
 }
