--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,25 @@
     display: flex !important;
 }
 
+.align-center {
+    align-items: center;
+    justify-content: center;
+}
+
+.modal .modal-content--image {
+    width: auto;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.modal .modal-content--image img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
