--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -88,7 +88,7 @@ input:focus {
     text-transform: capitalize;
 }
 
-.card {
+.custom-card {
     padding: 30px;
     margin-bottom: 30px;
     background-color: var(--main-bg);
@@ -100,7 +100,7 @@ input:focus {
     height: 100%;
 }
 
-.card.full-height {
+.custom-card.full-height {
     height: calc(100% - 30px);
 }
 
@@ -108,7 +108,7 @@ input:focus {
     text-transform: capitalize;
 }
 
-.card > div ~ div {
+.custom-card > div ~ div {
     margin-top: 30px;
 }
 
