--- a/frontend/src/components/UI/cards/productCard.css
+++ b/frontend/src/components/UI/cards/productCard.css
@@ -1,39 +1,48 @@
-.product-container {
-    margin: auto;
-    padding: 30px 0;
-    min-height: 250px;
-    max-width: 800px;
-    border-top: 1px solid #c0c2c7;
-    font-size: 20px;
-}
-
-.product{
+.product-card-container.row {
+    min-height: 220px;
     width: 100%;
-    margin: auto 0;
+    max-width: 800px;
+    border: 1px solid #c0c2c7;
+    box-shadow: 1px 1px 1px #c0c2c7;
+    font-size: 20px;
+    margin: 10px auto;
+}
+.product-card-content{
+    min-height: 100%;
+    padding-top: 50px;
+    margin: 0 auto;
 }
 
-.product-content{
-    padding: 10px;
-    margin: auto;
-}
-
-.product-content h5{
+.product-card-container h5{
     font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
-.product p{
+.product-card-container p{
     line-height: 5px;
-    font-size: 0.7em;
+    font-size: 0.75em;
 }
 
 .product-right{
+    border-left: 1px solid #c0c2c7;
     text-align: center;
-    margin: auto;
+    min-height: 100%;
+    padding-top: 45px;
+}
+
+.product-right .product-right-seller{
+    font-size: 0.6em;
+}
+
+.product-right .product-right-sellerNum{
+    font-size: 0.55em;
+    color: grey;
 }
 
 @media screen and (max-width: 768px){
 
-    .product-content{
+    .product-card-content{
         min-width: 100%;
         text-align: center;
     }
