--- a/frontend/src/components/UI/badge/badge.css
+++ b/frontend/src/components/UI/badge/badge.css
@@ -21,3 +21,7 @@
 .badge-warning {
     background-color: var(--main-color-orange);
 }
+
+.badge-info {
+    background-color: var(--main-color-cyan);
+}
