--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -48,10 +48,15 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", "Arial", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     letter-spacing: 0.7px;
+}
+
+p {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-weight: 500;
 }
 
 a {
