--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,17 @@
     animation: spin 1s linear infinite;
 }
 
+.component-loader-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .modal{
     display: flex !important;
 }
