--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,11 @@
     animation: spin 1s linear infinite;
 }
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 .component-loader-wrapper {
     display: flex;
     align-items: center;
@@ -62,7 +67,13 @@
     max-height: 100%;
 }
 
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+.carousel-item {
+    height: 350px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
+
+
+
